@@ -89,7 +89,7 @@ import static java.util.concurrent.TimeUnit.SECONDS;
 public class HttpServer
 {
     private static final String[] ENABLED_PROTOCOLS = System.getProperty("java.version").matches("11(\\.0\\.[12])?") ?
-            new String[] {"TLSv1.1", "TLSv1.2"} : new String[] {"TLSv1.1", "TLSv1.2", "TLSv1.3"};
+            new String[] {"TLSv1.2"} : new String[] {"TLSv1.2", "TLSv1.3"};
     private static final String[] ENABLED_CIPHERS = {
             "TLS_AES_256_GCM_SHA384",
             "TLS_AES_128_GCM_SHA256",
@@ -97,10 +97,6 @@ public class HttpServer
             "TLS_ECDHE_RSA_WITH_AES_128_GCM_SHA256",
             "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA384",
             "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA256",
-            "TLS_ECDHE_RSA_WITH_AES_256_CBC_SHA",
-            "TLS_ECDHE_RSA_WITH_AES_128_CBC_SHA",
-            "TLS_RSA_WITH_AES_256_CBC_SHA",
-            "TLS_RSA_WITH_AES_128_CBC_SHA",
             "TLS_EMPTY_RENEGOTIATION_INFO_SCSV",
     };
 
